fix target directory on netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  publish = "dist/angular-modules"
+  publish = "dist/my-store-api"
   command = "npm run build"
 [[redirects]]
   from = "/*"
