--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/my-store-api"
-  command = "npm run build"
+  command = "export NODE_OPTIONS=--openssl-legacy-provider && npm run build"
 [[redirects]]
   from = "/*"
   to = "/index.html"
